--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
   font-family: "Gilroy", Tahoma, sans-serif;
   font-size: 18px;
   font-weight: 700;
-  text-transform: uppercase;
   background-color: #ffffff;
   color: #000000;
 }
@@ -27,6 +26,7 @@ body {
   font-size: 48px;
   color: #000000;
   text-decoration: none;
+  text-transform: uppercase;
 }
 
 .logo:hover {
@@ -53,7 +53,6 @@ body {
   font-size: 15px;
   font-weight: 300;
   text-decoration: none;
-  text-transform: none;
   color: #000000;
 }
 
@@ -72,6 +71,7 @@ body {
 
 .menu-link {
   text-decoration: none;
+  text-transform: uppercase;
   color: #000000;
 }
 
@@ -97,14 +97,26 @@ body {
 .slider-char-table td {
   font-size: 35px;
   font-weight: 300;
-  text-transform: none;
 }
 
 .slider-char-table th {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 13px;
   font-weight: 300;
-  text-transform: none;
+}
+
+.link-popular {
+  font-size: 18px;
+  text-decoration: none;
+  color: #000000;
+}
+
+.link-popular:hover {
+
+}
+
+.link-popular:active {
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .visually-hidden {
