--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,18 @@ body {
 }
 
 .site-header {
+  outline: 1px solid chartreuse;
+
   max-width: 1160px;
-  height: 190px;
+  height: 185px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 40px;
   background-color: rgba(240, 197, 46, 0.5);
+}
+
+.site-header * {
+  outline: 1px solid orchid;
 }
 
 .logo {
@@ -59,6 +65,7 @@ body {
 
 .header-panel {
   display: flex;
+  align-items: flex-start;
   margin-left: 60px;
   margin-right: 60px;
   margin-bottom: 40px;
@@ -141,7 +148,7 @@ body {
 
 .compare {
   padding-left: 10px;
-  margin-left: 220px;
+  margin-left: 60px;
 }
 
 .compare::before {
@@ -822,6 +829,7 @@ body {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 15px;
   font-weight: 300;
+  margin: 0;
 }
 
 .logout {
@@ -829,7 +837,13 @@ body {
 }
 
 .page-title {
+  width: 1160px;
+  margin: 40px auto 30px;
+  padding-left: 60px;
+  font-family: "Gilroy", Tahoma, sans-serif;
   font-size: 47px;
+  font-weight: 700;
+  line-height: 1em;
 }
 
 .crumb {
