--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,39 @@ body {
 
 .service-name {
   position: absolute;
-  width: 280px;
+  width: 160px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  text-align: center;
+}
+
+.service-name span {
+  display: block;
+  width: 100%;
+  height: 8px;
+  background-color: #f0c52e;
+  z-index: -1;
+}
+
+/*service-name::before {
+  content: "";
+  display: block;
+  top: 40%;
+  left: 0;
+  height: 8px;
+  background-color: #f0c52e;
+  width: 100%;
+  z-index: -1;
+}*/
+
+.service-name:hover {
+  padding-right: 120px;
+  background-color: #000000;
+}
+
+.service-name:hover .service-link {
+  margin-right: auto;
+  color: #f7e184;
 }
 
 .service-name:first-of-type {
@@ -555,14 +587,6 @@ body {
   color: #000000;
 }
 
-/*---затычка---*/
-.act-srv {
-  padding-top: 8px;
-  padding-bottom: 8px;
-  background-color: #000000;
-  color: #f7e184;
-}
-/*------------*/
 
 .service-desc h3 {
   font-family: "Gilroy", Tahoma, sans-serif;
