Adds fix size for header and background svg image for for service links.

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 .site-header {
   outline: 1px solid chartreuse;
 
-  max-width: 1160px;
+  width: 1160px;
   height: 185px;
   margin-left: auto;
   margin-right: auto;
@@ -533,30 +533,14 @@ body {
   padding-top: 8px;
   padding-bottom: 8px;
   text-align: center;
+  background-image: url("../img/svg/yellow-rect.svg");
+  background-position: center;
 }
-
-.service-name span {
-  display: block;
-  width: 100%;
-  height: 8px;
-  background-color: #f0c52e;
-  z-index: -1;
-}
-
-/*service-name::before {
-  content: "";
-  display: block;
-  top: 40%;
-  left: 0;
-  height: 8px;
-  background-color: #f0c52e;
-  width: 100%;
-  z-index: -1;
-}*/
 
 .service-name:hover {
   padding-right: 120px;
   background-color: #000000;
+  background-image: none;
 }
 
 .service-name:hover .service-link {
