--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ body {
   background-color: rgba(240, 197, 46, 0.5);
 }
 
+.index-header {
+  padding-bottom: 115px;
+}
+
 .site-header * {
   outline: 1px solid orchid;
 }
@@ -302,6 +306,7 @@ body {
 .slider-wrapper {
   width: 1160px;
   height: 500px;
+  margin-top: -100px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 95px;
