--- a/css/style.css
+++ b/css/style.css
@@ -500,36 +500,37 @@ body {
   background-image: url("../img/svg/popular-6.svg");
 }
 
-/*.service * {
-  outline: 1px solid orangered;
-}*/
-
 .service {
-  /*outline: 1px solid green;*/
+  outline: 1px solid green;
+
   height: 390px;
   margin-bottom: 100px;
-  background-color: #e5e5e5;
-  /*background: linear-gradient(to bottom, #ffffff 25.64%, #e5e5e5 74.36%);*/
-  /*#ffffff 25.64%, #e5e5e5 74.36%*/
+  background: linear-gradient(#ffffff 0px, #ffffff 102px, #e5e5e5 102px, #e5e5e5 390px);
+}
+
+.service * {
+  outline: 1px solid royalblue;
 }
 
 .service dl {
   position: relative;
   width: 1160px;
   height: 320px;
-  /*padding-top: 80px;*/
   margin-left: auto;
   margin-right: auto;
 }
 
 .service-desc {
   padding-left: 120px;
+  padding-right: 210px;
   padding-top: 80px;
   padding-bottom: 85px;
   margin-left: 280px;
   width: 500px;
   height: 155px;
-  border-left: 5px solid #000000;
+  border-left: 8px solid #000000;
+  background-repeat: no-repeat;
+  background-position: right;
 }
 
 .service-name {
@@ -576,6 +577,17 @@ body {
   color: #000000;
 }
 
+.delivery {
+  background-image: url("../img/svg/delivery.svg");
+}
+
+.warranty {
+  background-image: url("../img/svg/warranty.svg");
+}
+
+.credit {
+  background-image: url("../img/svg/credit.svg");
+}
 
 .service-desc h3 {
   font-family: "Gilroy", Tahoma, sans-serif;
