--- a/css/style.css
+++ b/css/style.css
@@ -304,12 +304,23 @@ body {
 }
 
 .slider-wrapper {
+  outline: 1px solid maroon;
+
+  position: relative;
   width: 1160px;
   height: 500px;
   margin-top: -100px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 95px;
+}
+
+.slider-wrapper * {
+  outline: 1px solid darkorchid;
+}
+
+.slider-wrapper input[type="radio"] {
+  display: none;
 }
 
 .slider-element {
@@ -407,8 +418,19 @@ body {
 
 .slider-switch {
   position: absolute;
-  top: 350px;
-  left: 1300px;
+  right: 100px;
+  bottom: 175px;
+  width: 160px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-size: 0px;
+}
+
+.slider-switch label {
+  width: 23px;
+  height: 23px;
+  background-image: url("../img/svg/slider-button-empty.svg");
 }
 
 .categories {
