--- a/css/style.css
+++ b/css/style.css
@@ -90,18 +90,26 @@ body {
 .search-field {
   width: 355px;
   padding-left: 36px;
+  padding-top: 10px;
   padding-bottom: 10px;
   margin-left: 4px;
   background-color: #f7e296;
   background-image: url("../img/svg/search.svg");
   background-repeat: no-repeat;
+  background-position-y: 9px;
+  background-position-x: left;
   border: none;
   font-weight: 300;
   outline: none;
 }
 
 .search-field:focus {
+  padding-bottom: 8px;
   border-bottom: 2px solid #000000;
+}
+
+.search-field:focus + .search-btn {
+  display: block;
 }
 
 .search-field::placeholder {
@@ -113,6 +121,7 @@ body {
 }
 
 .search-btn {
+  display: none;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 7px;
@@ -125,83 +134,34 @@ body {
   position: relative;
   text-decoration: none;
   color: #000000;
+  background-repeat: no-repeat;
+  background-position: 0 center;
+}
+
+.site-link:hover {
+  opacity: 0.6;
+}
+
+.site-link:active {
+  opacity: 0.3;
 }
 
 .login {
   padding-left: 27px;
   margin-left: auto;
-}
-
-.login::before {
-  content: "";
-  position: absolute;
-  top: 9px;
-  left: 0;
   background-image: url("../img/svg/user.svg");
-  width: 13px;
-  height: 12px;
-}
-
-.login:hover::before {
-  opacity: 0.6;
-}
-
-.login:active::before {
-  opacity: 0.3;
 }
 
 .compare {
-  padding-left: 10px;
+  padding-left: 19px;
   margin-left: 60px;
-}
-
-.compare::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: -10px;
   background-image: url("../img/svg/compare.svg");
-  width: 10px;
-  height: 10px;
-}
-
-.compare:hover::before {
-  opacity: 0.8;
-}
-
-.compare:active::before {
-  opacity: 0.3;
 }
 
 .cart {
-  padding-left: 12px;
+  padding-left: 24px;
   margin-left: 45px;
-}
-
-.cart::before {
-  content: "";
-  position: absolute;
-  top: 9px;
-  left: -10px;
   background-image: url("../img/svg/cart.svg");
-  width: 12px;
-  height: 12px;
-}
-
-.cart:hover::before {
-  opacity: 0.8;
-}
-
-.cart:active::before {
-  opacity: 0.3;
-}
-
-.site-link:hover {
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.site-link:active {
-  color: rgba(0, 0, 0, 0.3);
 }
 
 .main-menu {
